--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background: #F2F2F2;
+    background: #F2B355;
 }
 section{
     text-align: center;
@@ -8,6 +8,9 @@ section{
 .navbar{
 	height: 80px;
 	box-shadow:9px 2px 10px rgb(91 91 91 / 0.49);
+}
+.bg-light{
+	background-color: #FFF;
 }
 .wrapper-avatar{
 	margin-top: 50px;
@@ -31,32 +34,41 @@ a {
 	text-decoration: none;
 }
 .btn-abrir{
-	color: slateblue;
+	color: #FFF;
 	font-size: 25px;
 
 }
 .menu{
 	height: 100%;
 	width: 250px;
-	background-color: teal;
+	background-color: #FFF;
 	position: fixed;
 	top: 0;
 	left: 0;
 	z-index: 1;
 	overflow: hidden;
+	transform: translateX(-100%);
 	transition: width 0.3s;
 }
 .menu a{
-	color: violet;
-	font-size: 25px;
+	color: black;
+	font-size: 18px;
 	display: block;
 	padding: 12px 10px 12px 12px;
 }
 .menu a:hover{
-	color: yellow;
-	background-color: yellowgreen;
+	/**color: #f7d705;**/
+	color: #FFF;
+	background-color:#F2B355;
 }
-
+/*main*/
+.content {
+	padding: 24px;
+}
+/** Card para o padding **/
+.card-padding {
+	padding: 40px;
+}
 /** Formulário**/
 .center-form {
 	display: block;
@@ -98,4 +110,19 @@ input[type="text"] {
 	width: 100%;
 	padding: 16px 12px;
 	text-align: center;
+}
+
+/* desktop media queries */
+@media only screen and (min-width: 950px) {
+	.menu {
+		height: calc(100% - 80px);
+		bottom: 0;
+		top: initial;
+		transform: translateX(0);
+	}
+	.content{
+		padding: 40px;
+		padding-left: 290px;
+	}
+
 }
