--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@ section{
 }
 /**Navbar**/
 .navbar{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 10000;
 	height: 80px;
 	box-shadow:9px 2px 10px rgb(91 91 91 / 0.49);
 }
@@ -68,6 +73,7 @@ a {
 /*main*/
 .content {
 	padding: 24px;
+	padding-top: 104px;
 }
 /** Card para o padding **/
 .card-padding {
