--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ section{
 	top: 0;
 	left: 0;
 	width: 100%;
-	z-index: 10000;
+	z-index: 1000;
 	height: 80px;
 	box-shadow:9px 2px 10px rgb(91 91 91 / 0.49);
 }
@@ -145,6 +145,7 @@ input[type="text"] {
 	}
 	.content{
 		padding: 40px;
+		padding-top: 120px;
 		padding-left: 290px;
 	}
 
