--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-		background:url("../images/2563.jpg"), #cf7500;
+		background: #cf7500;
 		background-position: center, center;
 		background-repeat: no-repeat, no-repeat;
 		background-size: 100%, 100%;
@@ -17,22 +17,29 @@ section{
 	z-index: 1000;
 	height: 80px;
 	box-shadow:9px 2px 10px rgb(91 91 91 / 0.49);
+	margin-top: auto;
 }
 .bg-light{
 	background-color: #FFF;
 }
 .wrapper-avatar{
-	margin-top: 50px;
+	margin-top: 80px;
 }
 .avatar{
     width: 250px;
-    height: 250px;
-    display: inline-flex;
-    border: 8px solid #FFF;
+		height: 250px;
+		display: inline-flex;
+		margin-top: 50px;
+    border: 4px solid #FFF;
     border-radius: 50%;
     margin: 15px;
 		box-shadow: 0 6px 12px #ccc;
+		background-image: url("../images/Logo-TG.png");
+		/* background-size: cover; */
+		background-position: center;
+		background-size: 579px 305px;
 }
+
 .form-title{
 	border-bottom: 1px solid grey;
 	padding-bottom: 4px;
@@ -135,6 +142,19 @@ input[type="text"] {
 	width: 200px;
 }
 
+/* Padding editar categorias */
+.row-cat {
+	margin: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+
 /* desktop media queries */
 @media only screen and (min-width: 950px) {
 	.menu {
@@ -147,6 +167,9 @@ input[type="text"] {
 		padding: 40px;
 		padding-top: 120px;
 		padding-left: 290px;
+	}
+	.content.sem-sidebar {
+		padding-left: 40px;
 	}
 
 }
